fix consent styling on small screens

--- a/data/css/consent/styles.css
+++ b/data/css/consent/styles.css
@@ -2,6 +2,19 @@
     display: none;
 }
 
+#content {
+    width: auto;
+    margin: 0 20px;
+}
+#outer-wrapper {
+    min-width: 0;
+}
+#masthead {
+    width: auto;
+    margin-left: 0;
+    padding-left: 0;
+}
+
 .button {
     padding: 10px 20px;
     margin-right: 20px;
